<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>pawg.dosomedev</groupId>
  <artifactId>java-multithreads-example</artifactId>
  <version>1.0</version>
  <packaging>pom</packaging>

  <name>java-multithreads-example</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
  </properties>

  <modules>
    <module>array-blocking-queue</module>
    <module>array-deque</module>
    <module>array-list</module>
    <module>completable-future</module>
    <module>concurrent-hashmap</module>
    <module>date-formatting</module>
    <module>delay-queue</module>
    <module>enum-map</module>
    <module>enum-set</module>
    <module>future</module>
    <module>hash-map</module>
    <module>hash-set</module>
    <module>identity-hashmap</module>
    <module>linked-blocking-queue</module>
    <module>linked-hashmap</module>
    <module>linked-hashset</module>
    <module>linked-list</module>
    <module>networking</module>
    <module>optional</module>
    <module>priority-blocking-queue</module>
    <module>priority-queue</module>
    <module>stack</module>
    <module>string-buffer</module>
    <module>string-builder</module>
    <module>synchronous-queue</module>
    <module>threading</module>
    <module>tree-map</module>
    <module>tree-set</module>
    <module>vector</module>
    <module>weak-hashmap</module>
  </modules>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-shade-plugin</artifactId>
          <version>3.6.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.14.0</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
